# super-ctf

./: pyproject.toml
src/: main.py
src/super_ctf/: __init__.py  main.py  mutex.py  service.py  task.py  watcher.py
src/super_ctf/gui/: __init__.py  confetti.py  config.py  explosion.py  time.py  timer.py
src/super_ctf/persistency/: mutex.py  service.py  task.py
