[project]
name = "super-ctf"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "am", email = "am@example.com" }
]
requires-python = ">=3.13"
dependencies = [
    "pywin32>=311",
]

[project.scripts]
super-ctf = "super_ctf:main"

[build-system]
requires = ["uv_build>=0.8.13,<0.9.0"]
build-backend = "uv_build"
